--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     },
     "dependencies": {
         "framer-motion": "^12.23.24",
-        "lucide-react": "^0.552.0"
+        "lucide-react": "^0.552.0",
+        "ngrok": "^5.0.0-beta.2",
+        "react-calendar": "^6.0.0",
+        "react-icons": "^5.5.0",
+        "react-uuid": "^2.0.0",
+        "recharts": "^3.3.0"
     }
 }
